OTR(Backend): Init review fixes